# openfoodfacts-ai

./: .gitignore  CHANGELOG.md  ImageUtils.py  README.md  circular_model.ipynb  data-sets.md
spellcheck/: .gitignore  Dockerfile  Pipfile  README.md  SessionState.py  cli.py  constants.py  download_vocabulary.sh  ingredients.py  label.py  mongo.py  paths.py  pyproject.toml  regex.py  requirements.txt  review.py  sp_generate_corpus.py  sp_lowercase_corpus.py  sp_test.py  sp_train.py  spellcheck.py  test.py  utils.py
spellcheck/commands/: extract_from_argilla.sh  run_training.sh
spellcheck/config/: data.py  training.yml  training_llm.yml
spellcheck/config/training/: pretraining_conf.yml  training_conf.yml
spellcheck/data/benchmark/: benchmark.json  test_benchmark.json  verified_benchmark.parquet
spellcheck/data/database/: ingredients_complete.parquet
spellcheck/data/dataset/: 1_synthetic_data.jsonl  2_post_processed_synthetic_data.jsonl  extracted_lists_of_ingredients.parquet
spellcheck/data/evaluation/: claude-3-haiku-20240307-benchmark-v0.3.jsonl  claude-3-haiku-20240307.jsonl  claude-3-opus-20240229.jsonl  claude-3-sonnet-20240229-benchmark-v0.3.jsonl  claude-3-sonnet-20240229.jsonl  claude_3_haiku.jsonl  claude_3_sonnet.jsonl  gemini-1.0-pro-002-benchmark-v5-prompt-v6.jsonl  gemini-1.0-pro-002-ingredients-complete-data-v1-prompt-v6.jsonl  gemini-1.5-flash-preview-0514-benchmark-v5-prompt-v6.jsonl  gemini-1.5-flash-preview-0514-ingredients-complete-data-v1-prompt-v6.jsonl  gemini-1.5-pro-preview-0409-benchmark-v5-prompt-v6.jsonl  gemini-1.5-pro-preview-0409-ingredients-complete-data-v1-prompt-v6.jsonl  gpt-3.5-turbo-benchmark-v0.3.0.jsonl  gpt-3.5-turbo-benchmark-v0.3.1.jsonl  gpt-3.5-turbo-benchmark-v0.3.2.jsonl  gpt-3.5-turbo-benchmark-v4.2.jsonl  gpt-3.5-turbo-benchmark-v4.3.jsonl  gpt-3.5-turbo-benchmark-v4.4.jsonl  gpt-3.5-turbo-benchmark-v4.5.jsonl  gpt-3.5-turbo-benchmark-v5-prompt-v6.jsonl  gpt-3.5-turbo-ingredients-complete-data-v1-prompt-v6.jsonl  gpt-3.5-turbo.jsonl  gpt-4-turbo.jsonl  (+2 more)
spellcheck/docs/: Batch-job.xml
spellcheck/evaluation/: metrics.py  test_metrics.py  wagnerfisherpp.py
spellcheck/old/: .gitignore  README.md  cli.py  ingredients.py  mongo.py  requirements.txt  test.py
spellcheck/test_sets/: Pipfile  SessionState.py  label.py  utils.py
spellcheck/tests/: test_argilla.py  test_evaluate.py  test_processing.py  test_utils.py
spellcheck/utils/: argilla_modules.py  evaluation.py  llm.py  model.py  prompt.py  utils.py
spellcheck/vocabulary/: __init__.py
(+1344 files in other folders)
